--- a/index.html
+++ b/index.html
@@ -11,4 +11,13 @@
     }
   } catch (e) {
     console.warn('unable to connect to parent frame for connecting dev tools');
-  }</script></head><body><div id="root"></div><script src="./sb_dll/storybook_ui_dll.js"></script><script src="runtime~main.729a62daeea60911f9f0.bundle.js"></script><script src="vendors~main.91022dc60c71e349be69.bundle.js"></script><script src="main.764585a3e7542bb021ee.bundle.js"></script></body></html>
+  }</script>
+</head>
+<body>
+  <div id="root"></div>
+  <script src="./storybook-static/sb_dll/storybook_ui_dll.js"></script>
+  <script src="./storybook-static/runtime~main.729a62daeea60911f9f0.bundle.js"></script>
+  <script src="./storybook-static/vendors~main.91022dc60c71e349be69.bundle.js"></script>
+  <script src="./storybook-static/main.764585a3e7542bb021ee.bundle.js"></script>
+</body>
+</html>
