Adding better ShowcaseCard children styles.

--- a/storybook-static/index.html
+++ b/storybook-static/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
   <div id="root"></div>
-  <script src="./storybook-static/sb_dll/storybook_ui_dll.js"></script>
-  <script src="./storybook-static/runtime~main.729a62daeea60911f9f0.bundle.js"></script>
-  <script src="./storybook-static/vendors~main.91022dc60c71e349be69.bundle.js"></script>
-  <script src="./storybook-static/main.764585a3e7542bb021ee.bundle.js"></script>
+  <script src="./sb_dll/storybook_ui_dll.js"></script>
+  <script src="runtime~main.729a62daeea60911f9f0.bundle.js"></script>
+  <script src="vendors~main.91022dc60c71e349be69.bundle.js"></script>
+  <script src="main.764585a3e7542bb021ee.bundle.js"></script>
 </body>
 </html>
